# Heat-Dweller

./: .gitignore  CMakeLists.txt  CMakePresets.json  HOWTOPLAY.md  README.md  index.html  launch-game.js  main.js  package-lock.json  package.json
assets/: items.xml  playerselect.xml
assets/bosses/lua/: boss.lua
assets/bosses/xml/: boss.xml
assets/data/: config.xml  game.lua
assets/gfx/items/: items.xml
assets/sprites/characters/: character1.json
conig_settings/: config.ini
resources/: achivements.xml  audio.xml  bosses.xml  enemies.xml  health.xml  items.xml  playerselect.xml
resources/data/: config.xml  game.lua  items.lua
resources/gfx/bosses/: boss_002_lilsnake.json
resources/gfx/health/: hearts.json  hearts_001-004_redtoxiccharredgold.json  hearts_crashsave.aseprite
resources/gfx/monsters/: enemies_003_fly.json
resources/gfx/players/: character_001_matthew.json
resources/js/: main.js
resources/packed/scripts/: main.js
resources/scripts/items/: collectibles_bounce.lua
src/: Animation.cpp  Animation.h  AudioManager.cpp  AudioManager.h  ConfigLoader.cpp  ConfigLoader.h  GameEngine.cpp  GameEngine.h  InputManager.cpp  InputManager.h  ItemManager.cpp  ItemManager.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  ResourceTypes.h  TitleScene.cpp  TitleScene.h  main.cpp  renderer.js
src/core/: configLoader.js  gameEngine.js
src/scenes/: titleScene.js
src/systems/: collectibles.js  hudSystem.js  inputSystem.js  mapGenerator.js  renderSystem.js
tools/AnimationEditor/: README.md
tools/RoomEditor/: README.md
(+16 files in other folders)
